--- a/EmployeeManagement.Api/EmployeeManagement.Api.csproj
+++ b/EmployeeManagement.Api/EmployeeManagement.Api.csproj
@@ -5,7 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Compile Remove="Controllers\**" />
+    <Content Remove="Controllers\**" />
+    <EmbeddedResource Remove="Controllers\**" />
+    <None Remove="Controllers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Controllers\EmployeesController.cs" />
   </ItemGroup>
 
   <ItemGroup>
