--- a/EmployeeManagement.Api/EmployeeManagement.Api.csproj
+++ b/EmployeeManagement.Api/EmployeeManagement.Api.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
   </ItemGroup>
 
